--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: "3.8"
 services:
   web:
     build: ./app
-    image: 519088387044.dkr.ecr.us-west-1.amazonaws.com/django_docker_aws:django_docker_aws_web
+    image: 519088387044.dkr.ecr.us-west-1.amazonaws.com/django_docker_aws:djang\
+      o_docker_aws_web
     command: gunicorn hello_django.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - ./app/:/usr/src/app/
@@ -12,7 +13,8 @@ services:
       - 9000
   nginx:
     build: ./nginx
-    image: 519088387044.dkr.ecr.us-west-1.amazonaws.com/django_docker_aws:django_docker_aws_nginx
+    image: 519088387044.dkr.ecr.us-west-1.amazonaws.com/django_docker_aws:djang\
+      o_docker_aws_nginx
     volumes:
       - static_volume:/usr/src/app/static
     ports:
